--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport">
-        <title>Page</title>
+        <title>Messages</title>
+        <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
-        <div id="root"></div>
+
     </body>
 </html>
