--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
         <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
-
+        <div id="root"></div>
     </body>
 </html>
