--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Messages</title>
+        <title>Open-blog</title>
         <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
